# main-front

./: README.md
my-flask-app/: pyproject.toml  requirements.txt
my-flask-app/my_flask_app/: __init__.py
my-flask-app/my_flask_app/auth/: views.py
my-flask-app/my_flask_app/templates/apps/: home.html
