[tool.poetry]
name = "my-flask-app"
version = "0.1.0"
description = ""
authors = ["benchmarkco <110875467+benchmarkco@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "my_flask_app"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
